apps/overlays/k3s-prod-1/prod/podinfo/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
spec:
  parentRefs:
    - name: istio-default
      namespace: istio-ingress
  hostnames:
    - "podinfo-prod.isning.moe"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: podinfo
          port: 9898
          weight: 1
